Added: index, about, goals and content

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -14,10 +14,8 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="../images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
-
+			<img class="center-header" src="../images/Icons/tree.png">
+			
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
 				<div class="upperlines"></div>
@@ -39,16 +37,17 @@
 			</div>
 			
 		</nav>
-				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
 
+		<p>
+			نحن مجموعة من المطورين و المصممين أسسنا هذا الموقع بتاريخ 2021/10
+		</p>
+		<p>
+			للتواصل معنا يرجى التواصل عبر الأيميل التالي : m3alem.ksa@gmail.com
+		</p>
 	</div>
-	
 
-	<footer></footer>
+	<footer>
+		<img src="../images/Icons/city.png">
+	</footer>
 </body>
 </html>
