--- a/src/pages/account.html
+++ b/src/pages/account.html
@@ -14,9 +14,7 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="../images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
+			<img class="center-header" src="../images/Icons/tree.png">
 
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
@@ -40,15 +38,11 @@
 			
 		</nav>
 				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
-
 	</div>
 	
 
-	<footer></footer>
+	<footer>
+		<img src="../images/Icons/city.png">
+	</footer>
 </body>
 </html>
