--- a/src/pages/goals.html
+++ b/src/pages/goals.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl" lang="ar">
 <head>
 	<meta charset="utf-8">
 	<title>Suadi Land Makers</title>
@@ -14,9 +14,8 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="../images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
+
+			<img class="center-header" src="../images/Icons/tree.png">
 
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
@@ -25,9 +24,10 @@
 			</div>
 		</div>
 	</header>
-	
-	<div class="container">
 
+
+
+	<div class="container">
 		<nav>
 
 			<div class="base">
@@ -39,16 +39,15 @@
 			</div>
 			
 		</nav>
-				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
 
+		<p>
+			المملكه العربيه السعوديه ثرية بالمناطق و الحضارات و الاثار التاريخية و المعالم السياحية و نحن هنا في هذا الموقع نهدف الى اضهار وظننا الحبيب بصورة حسنة و ابراز هويتنا و ثقافتنا و معالما الحضارية من خلاله و تسليط الضوء على مناطق راىعة غير معروفة او لم تكتشف بعد و التشجيع على السياحة الداخلية.	
+		</p>
 	</div>
 	
 
-	<footer></footer>
+	<footer>
+		<img src="../images/Icons/city.png">
+	</footer>
 </body>
 </html>
