Fix: Home navbar

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 		<nav>
 
 			<div class="base">
-				<a class="active" href="./index.html">الصفحة الرىيسيه</a>
+				<a class="active" href="./index.html">الصفحة الرئيسيه</a>
 				<a href="pages/account.html">حسابي</a>
 				<a href="pages/rules.html">شروط و احكام</a>
 				<a href="pages/goals.html">أهداف</a>
