--- a/src/pages/account.html
+++ b/src/pages/account.html
@@ -29,7 +29,7 @@
 		<nav>
 
 			<div class="base">
-				<a href="../index.html">الصفحة الرىيسيه</a>
+				<a href="../index.html">الصفحة الرئيسيه</a>
 				<a class="active" href="account.html">حسابي</a>
 				<a href="rules.html">شروط و احكام</a>
 				<a href="goals.html">أهداف</a>
