--- a/src/pages/goals.html
+++ b/src/pages/goals.html
@@ -31,7 +31,7 @@
 		<nav>
 
 			<div class="base">
-				<a href="../index.html">الصفحة الرىيسيه</a>
+				<a href="../index.html">الصفحة الرئيسيه</a>
 				<a href="account.html">حسابي</a>
 				<a href="rules.html">شروط و احكام</a>
 				<a class="active" href="goals.html">أهداف</a>
