moved directories for github pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl" lang="ar">
 <head>
 	<meta charset="utf-8">
 	<title>Suadi Land Makers</title>
@@ -14,9 +14,7 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
+				<img class="center-header" src="images/Icons/tree.png">
 
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
@@ -25,13 +23,21 @@
 			</div>
 		</div>
 	</header>
-	
-	<div class="container">
 
+	<!-- <div class="search-container">
+		<div class="left-search-container"></div>
+		<form action="/action_page.php">
+			<input type="text" placeholder="Search.." name="search">
+			<button type="submit"><i class="fa fa-search"></i></button>
+		</form>
+		<div class="right-search-container"></div>
+	</div> -->
+
+	<div class="container">
 		<nav>
 
 			<div class="base">
-				<a class="active" href="./index.html">الصفحة الرىيسيه</a>
+				<a class="active" href="./index.html">الصفحة الرئيسيه</a>
 				<a href="pages/account.html">حسابي</a>
 				<a href="pages/rules.html">شروط و احكام</a>
 				<a href="pages/goals.html">أهداف</a>
@@ -39,16 +45,59 @@
 			</div>
 			
 		</nav>
-				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
-
 	</div>
-	
 
-	<footer></footer>
+	<main>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+		<div>
+			<a href="pages/content.html">
+				<img src="./images/السياحه-في-السعودية-1.jpg">
+			</a>
+		</div>
+	</main>
+
+	
+	<footer>
+		<img src="./images/Icons/city.png" alt="">
+	</footer>
 </body>
 </html>
