--- a/pages/rules.html
+++ b/pages/rules.html
@@ -14,9 +14,7 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="../images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
+			<img class="center-header" src="../images/Icons/tree.png">
 
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
@@ -31,7 +29,7 @@
 		<nav>
 
 			<div class="base">
-				<a href="../index.html">الصفحة الرىيسيه</a>
+				<a href="../index.html">الصفحة الرئيسيه</a>
 				<a href="account.html">حسابي</a>
 				<a class="active" href="rules.html">شروط و احكام</a>
 				<a href="goals.html">أهداف</a>
@@ -39,16 +37,23 @@
 			</div>
 			
 		</nav>
-				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
 
+
+		<ul>
+			<li>يمنع تنزيل محتوى فيه اساءة للوطن</li>
+			<li>الاتزام بالاداب و الذوق العام و عدم تنزيل محتوى به لبس خادش للحياء</li>
+			<li>يمنع نشر محتوى غير قانوني يستهدف الترويج لممارسات غير شرعية ينطوي عليها مسؤولية مدنية</li>
+			<li>يمنع تشويه الصورة العامة لأحد الاشخاص</li>
+			<li>يمنع انتحال المستخدم لهوية أحد الأفراد</li>
+			<li>يمنع استخدام الموقع في نشر محتوى لا علافة له بالخدمة المقدمة</li>
+			<li>يمنع تمثيل أحد المؤسسات أو الهيئات بدون أن يكون المستخدم مخولا بادعاء هذا التمثيل</li>
+			<li>يمنع نشر مواد تضر بالملكية الفكرية لأصحابها و تدخل في اطار سرقتها</li>
+			<li>صاحب الموقع له الحق في حذف محتواك أو حسابك الشخصي في حال الاخلال بأي من الشروط و الأحكام أعلاه</li>
+		</ul>
 	</div>
 	
-
-	<footer></footer>
+	<footer>
+		<img src="../images/Icons/city.png">
+	</footer>
 </body>
 </html>
