--- a/pages/content.html
+++ b/pages/content.html
@@ -14,9 +14,7 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-			<div class="center-header">
-				<img src="../images/Icons/tree.png" width="100%" height="100%" alt="">
-			</div>
+			<img class="center-header" src="../images/Icons/tree.png">
 
 			<div class="right-header">
 				<div class="header-title">معالم السعودية</div>
@@ -31,7 +29,7 @@
 		<nav>
 
 			<div class="base">
-				<a href="../index.html">الصفحة الرىيسيه</a>
+				<a href="../index.html">الصفحة الرئيسيه</a>
 				<a href="account.html">حسابي</a>
 				<a href="rules.html">شروط و احكام</a>
 				<a href="goals.html">أهداف</a>
@@ -39,16 +37,37 @@
 			</div>
 			
 		</nav>
+
+
+		<div class="card">
+			
+			<div class="card-header">
+				<div>اسم المكان/ المسجد الحرام</div>
+				<div>اسم المدينة/ مكة المكرمة</div>
+			</div>
+			
+			<div class="card-container">
 				
-		<!-- <main>
-			<article>
-				
-			</article>
-		</main> -->
+				<div class="image-container">
+						<img src="../images/السياحه-في-السعودية-1.jpg">
+				</div>
+
+				<button><img src="../images/Icons/greenheart.png"></button>
+
+			</div>
+
+		<div>
+		
+		<div class="list-card">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
 
 	</div>
-	
 
-	<footer></footer>
+	<footer>
+		<img src="../images/Icons/city.png">
+	</footer>
 </body>
 </html>
