--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="ar">
+<html>
 <head>
 	<meta charset="utf-8">
 	<title>Suadi Land Makers</title>
@@ -14,7 +14,6 @@
 				<div class="header-title">Saudi Land Maker</div>
 			</div>
 
-
 			<img class="center-header" src="../images/Icons/tree.png">
 
 			<div class="right-header">
@@ -25,25 +24,28 @@
 		</div>
 	</header>
 
-
 	<nav>
-
 		<div class="base">
 			<a href="../index.html">الصفحة الرئيسيه</a>
-			<a href="account.html">حسابي</a>
+			<a class="active" href="account.html">حسابي</a>
 			<a href="rules.html">شروط و احكام</a>
-			<a class="active" href="goals.html">أهداف</a>
-			<a href="about.html">من نحن</a>
+			<a href="goals.html">أهداف</a>
+			<a  href="about.html">من نحن</a>
 		</div>
 		
 	</nav>
 
 	<main>
-		<p>
-			المملكه العربيه السعوديه ثرية بالمناطق و الحضارات و الاثار التاريخية و المعالم السياحية و نحن هنا في هذا الموقع نهدف الى اظهار وطننا الحبيب بصورة حسنة و ابراز هويتنا و ثقافتنا و معالما الحضارية من خلاله و تسليط الضوء على مناطق رائعة غير معروفة او لم تكتشف بعد و التشجيع على السياحة الداخلية.	
-		</p>
+		<form action="" class="login-container">
+			<label for="email"> الايميل:</label>
+			<input class="" type="text" name="email" id="email">
+			
+			<label for="password">كلمة المرور:</label>
+			<input class="" type="text" name="password" id="password">
+            <a href="./account.html">دخول</a>
+		</form>
+		<a href="./signup.html">هل انت مستخدم جديد؟ أنشئ حسابك</a>
 	</main>
-	
 
 	<footer>
 		<img src="../images/Icons/city.png">
