--- a/pages/goals.html
+++ b/pages/goals.html
@@ -26,24 +26,23 @@
 	</header>
 
 
+	<nav>
 
-	<div class="container">
-		<nav>
+		<div class="base">
+			<a href="../index.html">الصفحة الرئيسيه</a>
+			<a href="account.html">حسابي</a>
+			<a href="rules.html">شروط و احكام</a>
+			<a class="active" href="goals.html">أهداف</a>
+			<a href="about.html">من نحن</a>
+		</div>
+		
+	</nav>
 
-			<div class="base">
-				<a href="../index.html">الصفحة الرئيسيه</a>
-				<a href="account.html">حسابي</a>
-				<a href="rules.html">شروط و احكام</a>
-				<a class="active" href="goals.html">أهداف</a>
-				<a href="about.html">من نحن</a>
-			</div>
-			
-		</nav>
-
+	<main>
 		<p>
-			المملكه العربيه السعوديه ثرية بالمناطق و الحضارات و الاثار التاريخية و المعالم السياحية و نحن هنا في هذا الموقع نهدف الى اضهار وظننا الحبيب بصورة حسنة و ابراز هويتنا و ثقافتنا و معالما الحضارية من خلاله و تسليط الضوء على مناطق راىعة غير معروفة او لم تكتشف بعد و التشجيع على السياحة الداخلية.	
+			المملكه العربيه السعوديه ثرية بالمناطق و الحضارات و الاثار التاريخية و المعالم السياحية و نحن هنا في هذا الموقع نهدف الى اظهار وطننا الحبيب بصورة حسنة و ابراز هويتنا و ثقافتنا و معالما الحضارية من خلاله و تسليط الضوء على مناطق رائعة غير معروفة او لم تكتشف بعد و التشجيع على السياحة الداخلية.	
 		</p>
-	</div>
+	</main>
 	
 
 	<footer>
