--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html dir="rtl" lang="ar">
 <head>
 	<meta charset="utf-8">
-	<title>Suadi Land Makers</title>
+	<title>Suadi Landmarks</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100;200;300;400;500&display=swap" rel="stylesheet">
+
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet"> 
 </head>
 <body>
 	<header>
@@ -32,66 +40,75 @@
 		</form>
 		<div class="right-search-container"></div>
 	</div> -->
+	
+	<nav>
 
-	<div class="container">
-		<nav>
-
-			<div class="base">
-				<a class="active" href="./index.html">الصفحة الرئيسيه</a>
-				<a href="pages/account.html">حسابي</a>
-				<a href="pages/rules.html">شروط و احكام</a>
-				<a href="pages/goals.html">أهداف</a>
-				<a href="pages/about.html">من نحن</a>
-			</div>
-			
-		</nav>
-	</div>
-
+		<div class="base">
+			<a class="active" href="./index.html">الصفحة الرئيسيه</a>
+			<a href="pages/login.html">حسابي</a>
+			<a href="pages/rules.html">شروط و احكام</a>
+			<a href="pages/goals.html">أهداف</a>
+			<a href="pages/about.html">من نحن</a>
+		</div>
+		
+	</nav>
 	<main>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
-		</div>
-		<div>
-			<a href="pages/content.html">
-				<img src="./images/السياحه-في-السعودية-1.jpg">
-			</a>
+		<div class="landmark-list">
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+
+			</div>
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+
+			</div>
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
 		</div>
 	</main>
 
