--- a/pages/about.html
+++ b/pages/about.html
@@ -24,27 +24,26 @@
 		</div>
 	</header>
 	
-	<div class="container">
+	<nav>
 
-		<nav>
+		<div class="base">
+			<a href="../index.html">الصفحة الرئيسيه</a>
+			<a href="account.html">حسابي</a>
+			<a href="rules.html">شروط و احكام</a>
+			<a href="goals.html">أهداف</a>
+			<a class="active" href="about.html">من نحن</a>
+		</div>
+		
+	</nav>
 
-			<div class="base">
-				<a href="../index.html">الصفحة الرئيسيه</a>
-				<a href="account.html">حسابي</a>
-				<a href="rules.html">شروط و احكام</a>
-				<a href="goals.html">أهداف</a>
-				<a class="active" href="about.html">من نحن</a>
-			</div>
-			
-		</nav>
-
+	<main>
 		<p>
 			نحن مجموعة من المطورين و المصممين أسسنا هذا الموقع بتاريخ 2021/10
 		</p>
 		<p>
 			للتواصل معنا يرجى التواصل عبر الأيميل التالي : m3alem.ksa@gmail.com
 		</p>
-	</div>
+	</main>
 
 	<footer>
 		<img src="../images/Icons/city.png">
