--- a/pages/account.html
+++ b/pages/account.html
@@ -23,23 +23,84 @@
 			</div>
 		</div>
 	</header>
-	
-	<div class="container">
 
-		<nav>
+	<nav>
+		<div class="base">
+			<a href="../index.html">الصفحة الرئيسيه</a>
+			<a class="active" href="account.html">حسابي</a>
+			<a href="rules.html">شروط و احكام</a>
+			<a href="goals.html">أهداف</a>
+			<a  href="about.html">من نحن</a>
+		</div>
+		
+	</nav>
 
-			<div class="base">
-				<a href="../index.html">الصفحة الرئيسيه</a>
-				<a class="active" href="account.html">حسابي</a>
-				<a href="rules.html">شروط و احكام</a>
-				<a href="goals.html">أهداف</a>
-				<a  href="about.html">من نحن</a>
+	<main>
+
+
+		<div class="">
+
+		</div>
+
+
+		<div class="landmark-list">
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
 			</div>
-			
-		</nav>
-				
-	</div>
-	
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+
+			</div>
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+
+			</div>
+			<div class="landmark">
+				<a href="pages/content.html">
+					<img src="./images/السياحه-في-السعودية-1.jpg">
+				</a>
+			</div>
+
+		</div>
+	</main>
 
 	<footer>
 		<img src="../images/Icons/city.png">
