--- a/pages/rules.html
+++ b/pages/rules.html
@@ -23,25 +23,21 @@
 			</div>
 		</div>
 	</header>
+	<nav>
+
+		<div class="base">
+			<a href="../index.html">الصفحة الرئيسيه</a>
+			<a href="account.html">حسابي</a>
+			<a class="active" href="rules.html">شروط و احكام</a>
+			<a href="goals.html">أهداف</a>
+			<a href="about.html">من نحن</a>
+		</div>
+	</nav>
 	
-	<div class="container">
-
-		<nav>
-
-			<div class="base">
-				<a href="../index.html">الصفحة الرئيسيه</a>
-				<a href="account.html">حسابي</a>
-				<a class="active" href="rules.html">شروط و احكام</a>
-				<a href="goals.html">أهداف</a>
-				<a href="about.html">من نحن</a>
-			</div>
-			
-		</nav>
-
-
+	<main>
 		<ul>
 			<li>يمنع تنزيل محتوى فيه اساءة للوطن</li>
-			<li>الاتزام بالاداب و الذوق العام و عدم تنزيل محتوى به لبس خادش للحياء</li>
+			<li>الالتزام بالاداب و الذوق العام و عدم تنزيل محتوى به لبس خادش للحياء</li>
 			<li>يمنع نشر محتوى غير قانوني يستهدف الترويج لممارسات غير شرعية ينطوي عليها مسؤولية مدنية</li>
 			<li>يمنع تشويه الصورة العامة لأحد الاشخاص</li>
 			<li>يمنع انتحال المستخدم لهوية أحد الأفراد</li>
@@ -50,7 +46,7 @@
 			<li>يمنع نشر مواد تضر بالملكية الفكرية لأصحابها و تدخل في اطار سرقتها</li>
 			<li>صاحب الموقع له الحق في حذف محتواك أو حسابك الشخصي في حال الاخلال بأي من الشروط و الأحكام أعلاه</li>
 		</ul>
-	</div>
+	</main>
 	
 	<footer>
 		<img src="../images/Icons/city.png">
